{
  "version": 4,
  "terraform_version": "0.12.12",
  "serial": 31,
  "lineage": "20992eba-7a31-6926-d309-4f4fdc403393",
  "resources": [
    {
      "module": "module.ecs-service",
      "mode": "data",
      "type": "aws_security_group",
      "name": "vpc_default_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:216952475463:security-group/sg-0b7e6acd9e92515ec",
            "description": "default VPC security group",
            "filter": null,
            "id": "sg-0b7e6acd9e92515ec",
            "name": "default",
            "tags": {},
            "vpc_id": "vpc-0162c70d4ac3770ae"
          },
          "depends_on": [
            "data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs-service",
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:216952475463:vpc/vpc-0162c70d4ac3770ae",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-01f26a57e3699df49",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-02682e64c1bc507a9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "*default*"
                ]
              }
            ],
            "id": "vpc-0162c70d4ac3770ae",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0837363ba5c82483b",
            "owner_id": "216952475463",
            "state": "available",
            "tags": {
              "Name": "default"
            }
          }
        }
      ]
    },
    {
      "module": "module.ecs-service",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:216952475463:loadbalancer/app/xyz-abc-develop-alb/bd5c816a0bd80412",
            "arn_suffix": "app/xyz-abc-develop-alb/bd5c816a0bd80412",
            "dns_name": "xyz-abc-develop-alb-98687084.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:216952475463:loadbalancer/app/xyz-abc-develop-alb/bd5c816a0bd80412",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "xyz-abc-develop-alb",
            "security_groups": [
              "sg-0d105c92aa0a0965b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00be7319ee440c845"
              },
              {
                "subnet_id": "subnet-04dd8af4d571b90df"
              },
              {
                "subnet_id": "subnet-0a53cc0ac395c2345"
              },
              {
                "subnet_id": "subnet-0b000fe53b333488f"
              },
              {
                "subnet_id": "subnet-0b9017e70fd5f8d90"
              },
              {
                "subnet_id": "subnet-0eb86f001ea587835"
              }
            ],
            "subnets": [
              "subnet-00be7319ee440c845",
              "subnet-04dd8af4d571b90df",
              "subnet-0a53cc0ac395c2345",
              "subnet-0b000fe53b333488f",
              "subnet-0b9017e70fd5f8d90",
              "subnet-0eb86f001ea587835"
            ],
            "tags": {
              "ApplicationID": "APID001",
              "Component": "ALB",
              "CostCentre": "CC001",
              "Environment": "develop",
              "Name": "xyz-abc-develop-alb",
              "ServiceName": "xyz"
            },
            "vpc_id": "vpc-0162c70d4ac3770ae",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "depends_on": [
            "aws_security_group.alb_sg",
            "data.aws_subnet_ids.subnet_ids"
          ]
        }
      ]
    },
    {
      "module": "module.ecs-service",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:216952475463:listener/app/xyz-abc-develop-alb/bd5c816a0bd80412/b292b946f50e73de",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:216952475463:targetgroup/xyz-abc-develop-target-group/a317d77de1cb1779",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:216952475463:listener/app/xyz-abc-develop-alb/bd5c816a0bd80412/b292b946f50e73de",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:216952475463:loadbalancer/app/xyz-abc-develop-alb/bd5c816a0bd80412",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_lb.alb",
            "aws_lb_target_group.target_group"
          ]
        }
      ]
    },
    {
      "module": "module.ecs-service",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:216952475463:targetgroup/xyz-abc-develop-target-group/a317d77de1cb1779",
            "arn_suffix": "targetgroup/xyz-abc-develop-target-group/a317d77de1cb1779",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 40,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:216952475463:targetgroup/xyz-abc-develop-target-group/a317d77de1cb1779",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "xyz-abc-develop-target-group",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0162c70d4ac3770ae"
          },
          "depends_on": [
            "aws_lb.alb",
            "data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs-service",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:216952475463:security-group/sg-0d105c92aa0a0965b",
            "description": "Allow inbound traffic to alb",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d105c92aa0a0965b",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8",
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "xyz-abc-develop-alb-sg20201226070244835900000001",
            "name_prefix": "xyz-abc-develop-alb-sg",
            "owner_id": "216952475463",
            "revoke_rules_on_delete": true,
            "tags": {
              "ApplicationID": "APID001",
              "Component": "Security Group",
              "CostCentre": "CC001",
              "Environment": "develop",
              "Name": "xyz-abc-develop-alb-sg",
              "ServiceName": "xyz"
            },
            "timeouts": null,
            "vpc_id": "vpc-0162c70d4ac3770ae"
          },
          "depends_on": [
            "data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs-service",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_service_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:216952475463:security-group/sg-00fb20d388f2e0696",
            "description": "Allow ephemeral port range inbound traffic from tg to ecs",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00fb20d388f2e0696",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 1024,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "xyz-abc-develop-ecs-service-sg20201226070244836000000002",
            "name_prefix": "xyz-abc-develop-ecs-service-sg",
            "owner_id": "216952475463",
            "revoke_rules_on_delete": true,
            "tags": {
              "ApplicationID": "APID001",
              "Component": "Security Group",
              "CostCentre": "CC001",
              "Environment": "develop",
              "Name": "xyz-abc-develop-ecs-service-sg",
              "ServiceName": "xyz"
            },
            "timeouts": null,
            "vpc_id": "vpc-0162c70d4ac3770ae"
          },
          "depends_on": [
            "data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs-service",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-4137916775",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0d105c92aa0a0965b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.ecs-service",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ecs_egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-424505876",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-00fb20d388f2e0696",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.ecs_service_sg"
          ]
        }
      ]
    },
    {
      "module": "module.ecs-service",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ecs_ingress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 1024,
            "id": "sgrule-919866119",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00fb20d388f2e0696",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.ecs_service_sg"
          ]
        }
      ]
    },
    {
      "module": "module.ecs-service",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "http_ingress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/8",
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-2693405232",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d105c92aa0a0965b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.ecs-service",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "https_ingress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/8"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-3597709117",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d105c92aa0a0965b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.alb_sg"
          ]
        }
      ]
    }
  ]
}